# behave-modern-json-report

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
behave_modern_json_report/: __init__.py  attach.py  collector.py  cucumber_formatter.py  cucumber_serializer.py  environment.py  formatter.py  models.py  schema.py  serializer.py  statistics.py  utils.py  validator.py
behave_modern_json_report/schemas/: execution.schema.json
docs/: api.md  architecture.md  contributing.md  migration.md  schema.md
examples/: calculator.feature  golden-report.json
examples/behave_project/: README.md  behave.ini  run.py
examples/behave_project/features/: auth.feature  calculator.feature  environment.py  shopping_cart.feature
examples/behave_project/features/steps/: auth_steps.py  calculator_steps.py  shopping_cart_steps.py
tests/: conftest.py  test_attach.py  test_collector.py  test_cucumber.py  test_environment.py  test_formatter.py  test_golden.py  test_serializer.py  test_statistics.py  test_utils.py  test_validator.py
