[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "behave-modern-json-report"
version = "1.0.0"
description = "Modern JSON report formatter for Behave that generates a rich, structured execution model."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "behave-modern-json-report contributors" },
]
keywords = [
    "behave",
    "bdd",
    "json",
    "report",
    "formatter",
    "cucumber",
    "gherkin",
    "testing",
    "schema",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: BDD",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
behave = ["behave>=1.2.6"]
dev = [
    "behave>=1.2.6",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "jsonschema>=4.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "build>=1.2",
]
validate = ["jsonschema>=4.21"]
env = ["psutil>=5.9"]

[project.urls]
Homepage = "https://github.com/MathiasPaulenko/behave-modern-json-report"
Repository = "https://github.com/MathiasPaulenko/behave-modern-json-report"
Issues = "https://github.com/MathiasPaulenko/behave-modern-json-report/issues"
Changelog = "https://github.com/MathiasPaulenko/behave-modern-json-report/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["behave_modern_json_report"]
include-package-data = true

[tool.setuptools.package-data]
behave_modern_json_report = ["schemas/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["behave_modern_json_report"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["behave_modern_json_report"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
